# mm-crypt

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
mm-crypt/: README.md  pyproject.toml
mm-crypt-cli/: README.md  pyproject.toml
mm-crypt-cli/docs/: tui-editor.md
mm-crypt-cli/src/mm_crypt_cli/: __init__.py  config.py  errors.py  io.py  main.py  secrets.py
mm-crypt-cli/src/mm_crypt_cli/cli/: context.py  main.py  secrets.py
mm-crypt-cli/src/mm_crypt_cli/cli/commands/: hello.py
mm-crypt-cli/src/mm_crypt_cli/commands/: editor.py
mm-crypt-cli/src/mm_crypt_cli/commands/fernet/: __init__.py  decrypt.py  encrypt.py  keygen.py
mm-crypt-cli/src/mm_crypt_cli/commands/openssl/: __init__.py  decrypt.py  encrypt.py
mm-crypt-cli/src/mm_crypt_cli/commands/scrypt/: __init__.py  decrypt.py  encrypt.py
mm-crypt-cli/src/mm_crypt_cli/core/: __init__.py  core.py
mm-crypt-cli/src/mm_crypt_cli/simpletui/: __init__.py  coredump.py  editor.py  keys.py  terminal.py  view.py
mm-crypt-cli/src/mm_crypt_cli/tui/: __init__.py  app.py  buffer.py  editor.py  hardening.py  keys.py  view.py
mm-crypt-cli/tests/: __init__.py  conftest.py
mm-crypt-cli/tests/mm_crypt_cli/: __init__.py  test_main.py  test_secrets.py
mm-crypt-cli/tests/mm_crypt_cli/cli/: __init__.py  test_secrets.py
mm-crypt-cli/tests/mm_crypt_cli/commands/: __init__.py  test_editor.py
mm-crypt-cli/tests/mm_crypt_cli/commands/fernet/: conftest.py  test_decrypt.py  test_encrypt.py  (+1 more)
mm-crypt-cli/tests/mm_crypt_cli/simpletui/: __init__.py  test_buffer.py  test_keys.py
mm-crypt/src/mm_crypt/: __init__.py  errors.py  fernet.py  openssl_aes256cbc.py  scrypt.py
mm-crypt/tests/: __init__.py  test_fernet.py  test_openssl_aes256cbc.py  test_scrypt.py
(+25 files in other folders)
