[project]
name = "mm-crypt"
version = "0.0.1"
description = "Python cryptography library: OpenSSL-compatible AES-256-CBC, Fernet, and scrypt-based encryption"
readme = "README.md"
license = "MIT"
authors = [{ name = "mcbarinov" }]
keywords = ["cryptography", "encryption", "openssl", "fernet", "scrypt", "aes"]
classifiers = [
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.14"
dependencies = [
    "cryptography~=46.0",
]

[project.urls]
Homepage = "https://github.com/mcbarinov/mm-crypt"
Repository = "https://github.com/mcbarinov/mm-crypt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "tmp/"]
